# tauri-plugin-macos-permissions

./: .gitignore  Cargo.toml  build.ts  package.json  tsconfig.json
src/: commands.rs
src/commands/: accessibility.rs  camera.rs  full_disk_access.rs  input_monitoring.rs  microphone.rs  mod.rs  screen_recording.rs
