[package]
name = "tauri-plugin-macos-permissions"
version = "0.1.0"
authors = [ "me" ]
description = "Support for checking and requesting macos system permissions."
license = "MIT"
edition = "2021"
rust-version = "1.77.2"
exclude = ["/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-macos-permissions"

[dependencies]
tauri.workspace = true
serde.workspace = true
thiserror.workspace = true

[build-dependencies]
tauri-plugin.workspace = true

[target."cfg(target_os = \"macos\")".dependencies]
macos-accessibility-client.workspace = true
objc2.workspace = true
objc2-foundation.workspace = true

[lints]
workspace = true
